--- a/src/app/front/components/video/video.component.html
+++ b/src/app/front/components/video/video.component.html
@@ -37,7 +37,7 @@
       </div>
 
       <div class="divider">&nbsp;</div>
-    
+
       <div class="col-xs-12 col-md-8 col-md-offset-2" *ngFor="let video of liveRecords;let i = index">
         <h4>{{video.title}}</h4>
         <div class="embed-responsive embed-responsive-16by9" style="border: 10px solid #FF0000;border-radius: 25px;">
@@ -52,7 +52,7 @@
         </div>
       </div>
 
-      <a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top" role="button" title="Click to return on the top page" data-toggle="tooltip" data-placement="left"><span class="glyphicon glyphicon-chevron-up"></span></a>
+      <!--<a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top" role="button" title="Click to return on the top page" data-toggle="tooltip" data-placement="left"><span class="glyphicon glyphicon-chevron-up"></span></a>-->
 
     </div>
   </div>
