--- a/src/app/front/components/video/video.component.html
+++ b/src/app/front/components/video/video.component.html
@@ -6,7 +6,9 @@
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 sidePad">
         <div class="lineupHedin">
-          <h1>Videos</h1>
+          <h1 style="display: inline-block;">Videos -</h1>
+
+          <span style="padding-left: 5px;">Daily Fantasy Sports insights to help build your bankroll!</span>
         </div>
       </div>
     </div>
@@ -45,10 +47,13 @@
         </div>
       </div>
 
-      <div class="col-xs-12 col-md-8 col-md-offset-2" *ngFor="let video of videoRecords;let i = index">
+      <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/7I2Af2yaM3w?rel=0&modestbranding=1&controls=1&showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+
+      <div class="col-xs-12 col-md-8 col-md-offset-2" *ngFor="let video of videoRecords;let i = index" style="margin-bottom:25px;">
         <h4>{{video.title}}</h4>
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" [src]="video.url" frameborder="0" allowfullscreen></iframe>
+
+          <iframe class="embed-responsive-item" [src]="video.url" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
 
