added twitter widget

--- a/src/app/front/components/home/front-home.component.html
+++ b/src/app/front/components/home/front-home.component.html
@@ -454,11 +454,8 @@
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3.5">
          <div class="indexNPrt2Rght">
-           <div class="ylwTpBx clearfix">
-             <h3 routerLink="/news">Twitter Feed</h3>
-             <p><img src="../../../../assets/images/twitter_icn.png" alt="" class="img-absolute"></p>
-           </div>
-           <a class="twitter-timeline" data-width="200" data-height="500" data-theme="dark" data-link-color="#FAB81E" href="https://twitter.com/RotoProsDFS?ref_src=twsrc%5Etfw">Tweets by RotoProsDFS</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+           <a class="twitter-timeline" position=fixed top="0" data-width= "400px" data-height= "auto" data-theme="dark" data-link-color="#FAB81E" href="https://twitter.com/RotoProsDFS?ref_src=twsrc%5Etfw">Tweets by RotoProsDFS</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
            <!-- Nav tabs -->
            <!--
