videos and lineups page changes

--- a/src/app/front/components/video/video.component.html
+++ b/src/app/front/components/video/video.component.html
@@ -4,13 +4,13 @@
       <md-progress-spinner mode="indeterminate" color="accent" style="width: 50px;height: 50px"></md-progress-spinner>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 sidePad">
-        <div class="lineupHedin">
-          <h1 style="display: inline-block;">Videos -</h1>
-
-          <span style="padding-left: 5px;">Daily Fantasy Sports insights to help build your bankroll!</span>
+      <div class="col-xs-12 sidePad">
+        <div class="lineupHedin" style="text-align:center">
+          <h1>Videos</h1>
+          <span style="font-size: 18px;">Daily Fantasy Sports insights to help build your bankroll!</span>
         </div>
       </div>
+
     </div>
   </div>
 </section>
@@ -33,7 +33,7 @@
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <div style="text-align:center">
-            <h3>Other Videos</h3>
+            <h3>Previously recorded shows</h3>
           </div>
         </div>
       </div>
