--- a/src/app/front/components/daily-lineup/daily-lineup.component.html
+++ b/src/app/front/components/daily-lineup/daily-lineup.component.html
@@ -6,11 +6,11 @@
       <md-progress-spinner mode="indeterminate" color="accent" style="width: 50px;height: 50px"></md-progress-spinner>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 sidePad">
-        <div class="lineupHedin">
-          <h1 style="display: inline-block;">Daily Lineups -</h1>
+      <div class="col-xs-12  sidePad">
+        <div class="lineupHedin" style="text-align:center">
+          <h1>Daily Lineups</h1>
 
-          <span style="padding-left: 5px;">MLB starting lineups updated live as they are released.</span>
+          <span style="font-size: 18px;">MLB starting lineups updated live as they are released.</span>
         </div>
         <!-- <div class="dTabs"> -->
           <!-- Nav tabs -->
