lineup and home page changes

--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -122,9 +122,9 @@
 
               <li id="rss">
                 <a routerLink="/podcast">Foul Balls</a>
-                <a href="http://feeds.soundcloud.com/users/soundcloud:users:308749747/sounds.rss">
+                <!-- <a href="http://feeds.soundcloud.com/users/soundcloud:users:308749747/sounds.rss">
                   <i class="fa fa-rss-square" id="rss-link"></i>
-                </a>
+                </a> -->
               </li>
 
             </ul>
