--- a/src/app/front/components/home/front-home.component.html
+++ b/src/app/front/components/home/front-home.component.html
@@ -115,9 +115,9 @@
           </div>-->
 
           <div class="ylwTpBxInfoWrap">
-            <div class="ylwTpBx clearfix pointer">
+            <div class="ylwTpBx clearfix">
               <h3>Latest News <span><img src="../../../../assets/images/blkArow.png"></span></h3>
-              <p><img src="../../../../assets/images/rght_icn3.png" alt="" class="img-responsive"></p>
+              <!-- <p><img src="../../../../assets/images/rght_icn3.png" alt="" class="img-responsive"></p> -->
             </div>
             <div class="ylwTpBxBtm">
               <div class="ylwTpBxBtmBx2Wrap">
@@ -207,11 +207,11 @@
                           [attr.src]="findMedia(article.featured_media) ? findMedia(article.featured_media) : '../../../../assets/images/base-ball.jpg'">
                       </div>
                       <div class="article-details">
-                        <div class="article-title">{{article.title.rendered}}</div>
+                        <div class="article-title" [innerHTML]="article.title.rendered"></div>
                         <div class="article-decs">{{article.extract?.slice(0,120)}}...</div>
                       </div>
                     </div>
-                    <div class="article-link" *ngIf="i > 0">{{article.title.rendered.trim()}}</div>
+                    <div class="article-link" *ngIf="i > 0" [innerHTML]="article.title.rendered.trim()"></div>
                   </div>
                 </div>
               </div>
@@ -229,11 +229,11 @@
                           [attr.src]="findMedia(article.featured_media) ? findMedia(article.featured_media) : '../../../../assets/images/base-ball.jpg'">
                       </div>
                       <div class="article-details">
-                        <div class="article-title">{{article.title.rendered}}</div>
+                        <div class="article-title" [innerHTML]="article.title.rendered"></div>
                         <div class="article-decs">{{article.extract?.slice(0,120)}}...</div>
                       </div>
                     </div>
-                    <div class="article-link" *ngIf="i > 0">{{article.title.rendered.trim()}}</div>
+                    <div class="article-link" *ngIf="i > 0" [innerHTML]="article.title.rendered.trim()"></div>
                   </div>
                 </div>
               </div>
@@ -253,11 +253,11 @@
                           [attr.src]="findMedia(article.featured_media) ? findMedia(article.featured_media) : '../../../../assets/images/base-ball.jpg'">
                       </div>
                       <div class="article-details">
-                        <div class="article-title">{{article.title.rendered}}</div>
+                        <div class="article-title" [innerHTML]="article.title.rendered"></div>
                         <div class="article-decs">{{article.extract?.slice(0,120)}}...</div>
                       </div>
                     </div>
-                    <div class="article-link" *ngIf="i > 0">{{article.title.rendered.trim()}}</div>
+                    <div class="article-link" *ngIf="i > 0" [innerHTML]="article.title.rendered.trim()"></div>
                   </div>
                 </div>
               </div>
@@ -275,11 +275,11 @@
                           [attr.src]="findMedia(article.featured_media) ? findMedia(article.featured_media) : '../../../../assets/images/base-ball.jpg'">
                       </div>
                       <div class="article-details">
-                        <div class="article-title">{{article.title.rendered}}</div>
+                        <div class="article-title" [innerHTML]="article.title.rendered"></div>
                         <div class="article-decs">{{article.extract?.slice(0,120)}}...</div>
                       </div>
                     </div>
-                    <div class="article-link" *ngIf="i > 0">{{article.title.rendered.trim()}}</div>
+                    <div class="article-link" *ngIf="i > 0" [innerHTML]="article.title.rendered.trim()"></div>
                   </div>
                 </div>
               </div>
@@ -299,11 +299,11 @@
                           [attr.src]="findMedia(article.featured_media) ? findMedia(article.featured_media) : '../../../../assets/images/base-ball.jpg'">
                       </div>
                       <div class="article-details">
-                        <div class="article-title">{{article.title.rendered}}</div>
+                        <div class="article-title" [innerHTML]="article.title.rendered"></div>
                         <div class="article-decs">{{article.extract?.slice(0,120)}}...</div>
                       </div>
                     </div>
-                    <div class="article-link" *ngIf="i > 0">{{article.title.rendered.trim()}}</div>
+                    <div class="article-link" *ngIf="i > 0" [innerHTML]="article.title.rendered.trim()"></div>
                   </div>
                 </div>
               </div>
@@ -321,11 +321,11 @@
                           [attr.src]="findMedia(article.featured_media) ? findMedia(article.featured_media) : '../../../../assets/images/base-ball.jpg'">
                       </div>
                       <div class="article-details">
-                        <div class="article-title">{{article.title.rendered}}</div>
+                        <div class="article-title" [innerHTML]="article.title.rendered"></div>
                         <div class="article-decs">{{article.extract?.slice(0,120)}}...</div>
                       </div>
                     </div>
-                    <div class="article-link" *ngIf="i > 0">{{article.title.rendered.trim()}}</div>
+                    <div class="article-link" *ngIf="i > 0" [innerHTML]="article.title.rendered.trim()"></div>
                   </div>
                 </div>
               </div>
@@ -345,11 +345,11 @@
                           [attr.src]="findMedia(article.featured_media) ? findMedia(article.featured_media) : '../../../../assets/images/base-ball.jpg'">
                       </div>
                       <div class="article-details">
-                        <div class="article-title">{{article.title.rendered}}</div>
+                        <div class="article-title" [innerHTML]="article.title.rendered"></div>
                         <div class="article-decs">{{article.extract?.slice(0,120)}}...</div>
                       </div>
                     </div>
-                    <div class="article-link" *ngIf="i > 0">{{article.title.rendered.trim()}}</div>
+                    <div class="article-link" *ngIf="i > 0" [innerHTML]="article.title.rendered.trim()"></div>
                   </div>
                 </div>
               </div>
@@ -421,7 +421,7 @@
         <div class="indexNPrt2Rght">
           <div class="ylwTpBx clearfix">
             <h3>Social Feeds<span><img src="../../../../assets/images/blkArow.png"></span></h3>
-            <p><img src="../../../../assets/images/rght_icn3.png" alt="" class="img-responsive"></p>
+            <!-- <p><img src="../../../../assets/images/rght_icn3.png" alt="" class="img-responsive"></p> -->
           </div>
 
           <!-- Nav tabs -->
