integrated twitter widget.

--- a/src/app/front/components/home/front-home.component.html
+++ b/src/app/front/components/home/front-home.component.html
@@ -419,12 +419,13 @@
       </div>
       <div class="col-md-3">
         <div class="indexNPrt2Rght">
-          <div class="ylwTpBx clearfix">
+          <a class="twitter-timeline" position=fixed top="0" data-width= "400px" data-height= "100%" data-theme="dark" data-link-color="#FAB81E" href="https://twitter.com/RotoProsDFS?ref_src=twsrc%5Etfw">Tweets by RotoProsDFS</a>
+          <!--<div class="ylwTpBx clearfix">
             <h3>Social Feeds<span><img src="../../../../assets/images/blkArow.png"></span></h3>
-            <!-- <p><img src="../../../../assets/images/rght_icn3.png" alt="" class="img-responsive"></p> -->
+            &lt;!&ndash; <p><img src="../../../../assets/images/rght_icn3.png" alt="" class="img-responsive"></p> &ndash;&gt;
           </div>
 
-          <!-- Nav tabs -->
+          &lt;!&ndash; Nav tabs &ndash;&gt;
           <ul class="nav nav-tabs" role="tablist">
             <li role="presentation" class="active"><a href="#nTwtr" aria-controls="nTwtr" role="tab"
                                                       data-toggle="tab"><img
@@ -435,7 +436,7 @@
               src="../../../../assets/images/insta_icn.png" alt=""></a></li>
           </ul>
 
-          <!-- Tab panes -->
+          &lt;!&ndash; Tab panes &ndash;&gt;
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane active" id="nTwtr">
               <div class="nSocialTbWrap">
@@ -495,11 +496,11 @@
                       <a href="https://www.instagram.com/{{tweet?.user?.username}}" target="_blank"><span
                         class="icnWrapperS">{{tweet?.user.full_name}}</span><i><img
                         src="../../../../assets/images/insta_icn.png"></i></a>
-                      <!--<div class="nltstNwsInfoTme">
+                      &lt;!&ndash;<div class="nltstNwsInfoTme">
                         <span class="icnWrapperS"><img src="../../../../assets/images/nclck_icn.png" alt=""
                                                        class="img-responsive"></span>
                         <i>{{tweet.created_time |date:'dd MMM, yyyy h:m a'}}</i>
-                      </div>-->
+                      </div>&ndash;&gt;
                     </div>
                     <p>{{tweet?.caption?.text?.slice(0,150)}}...</p>
                     <a href="{{tweet?.link}}" class="nRdMor" target="_blank">Read More <span><img
@@ -508,7 +509,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div>-->
         </div>
       </div>
     </div>
