--- a/src/app/front/components/home/front-home.component.html
+++ b/src/app/front/components/home/front-home.component.html
@@ -419,7 +419,7 @@
       </div>
       <div class="col-md-3">
         <div class="indexNPrt2Rght">
-          <a class="twitter-timeline" position=fixed top="0" data-width= "400px" data-height= "100%" data-theme="dark" data-link-color="#FAB81E" href="https://twitter.com/RotoProsDFS?ref_src=twsrc%5Etfw">Tweets by RotoProsDFS</a>
+          <a class="twitter-timeline" data-width= "100%" data-height= "100%" data-theme="dark" data-link-color="#FAB81E" href="https://twitter.com/RotoProsDFS?ref_src=twsrc%5Etfw">Tweets by RotoProsDFS</a>
           <!--<div class="ylwTpBx clearfix">
             <h3>Social Feeds<span><img src="../../../../assets/images/blkArow.png"></span></h3>
             &lt;!&ndash; <p><img src="../../../../assets/images/rght_icn3.png" alt="" class="img-responsive"></p> &ndash;&gt;
